style.css
/* ... */
body {
  font-family: 'Poppins', sans-serif;
  background: #fff;
  color: #1a2236;
  margin: 0;
}

body::-webkit-scrollbar {
  display: none;
}

header {
  text-align: center;
  height: 100px;
}

a {
  text-decoration: none;
}

p {
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  letter-spacing: -0.01em;
  text-align: left;
}

h1 {
  margin: 0;
}

h3 {
  font-weight: 300;
  font-size: 20px;
  line-height: 80%;
}

h4 {
  font-weight: 300;
  font-size: 10.3334px;
}

button {
  cursor: pointer;
}

img {
  max-width: 100%;
  max-height: 100%;
  display: block;
}

section li {
  font-weight: 600;
  font-size: 18px;
  color: #fff;
}

footer {
  background: #1a2236;
  text-align: center;
}

footer ul {
  margin: 0;
}

textarea,
input {
  font-family: 'Poppins', sans-serif;
  font-size: 16px;
  cursor: pointer;
}

.title-word {
  animation: color-animation 4s linear infinite;
}

.title-word-1 {
  --color-1: #df8453;
  --color-2: #3d8dae;
  --color-3: #e4a9a8;
}

.title-word-2 {
  --color-1: #dbad4a;
  --color-2: #accfcb;
  --color-3: #17494d;
}

@keyframes color-animation {
  0% {
    color: var(--color-1);
  }

  32% {
    color: var(--color-1);
  }

  33% {
    color: var(--color-2);
  }

  65% {
    color: var(--color-2);
  }

  66% {
    color: var(--color-3);
  }

  99% {
    color: var(--color-3);
  }

  100% {
    color: var(--color-1);
  }
}

.showcase-name {
  display: flex;
  flex-direction: column;
}

.toggle {
  padding: 19px 14px;
}

/* .closeIcon {
  display: none;
} */

.hamburger {
  position: absolute;
  z-index: 100;
  top: 1rem;
  right: 1rem;
  padding: 4px;
  border: black solid 0;
  background: none;
  cursor: pointer;
}

.menu {
  position: fixed;
  transform: translateY(-100%);
  transition: transform 0.2s;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 99;
  color: #1a2236;
  background: white;
  list-style: none;
  background-image: url(./assets/img/hamburger-menu-top.png), url(./assets/img/hamburger-menu-bottom.png);
  background-position: left top, left bottom;
  background-repeat: no-repeat, no-repeat;
  background-size: 75%, 100%;
  padding: 15px;
}

.menu-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 30px;
  height: 100%;
  margin-top: -40px;
}

.menu-item-desktop {
  display: none;
}

.menu-item li {
  list-style: none;
}

.popup-buttons a {
  color: inherit;
}

.menu-item li a {
  color: #1a2236;
}

.menu-desktop {
  display: none;
}

.showMenu {
  transform: translateY(0);
}

.primary-btn {
  font-size: 16px;
  box-sizing: border-box;
  color: #fff;
}

.primary-btn-2 {
  display: flex;
  margin: 20px 0;
  border: 1px solid #fff;
  padding: 16px 0 16px 16px;
  width: 53%;
  background: #1a2236;
  color: #fff;
}

.showcase_text .primary-btn {
  background: #1a2236;
  text-align: center;
  padding: 12px 42px;
}

.container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.container #logo {
  height: 74px;
  left: -2px;
  top: 0;
  border-radius: 0;
}

.right_arrow {
  display: block;
  width: 20.57px;
  height: 15.35px;
  margin: 3px 0 0 10px;
}

.wrapper {
  display: flex;
  flex-direction: column;
}

#tagline {
  font-family: 'Playfair Display', sans-serif;
  font-size: 50px;
  font-weight: 400;
  line-height: 50px;
  letter-spacing: 0;
  text-align: left;
  margin-top: 30px;
}

.showcase {
  display: flex;
  flex-direction: column;
}

.showcase_text {
  display: flex;
  flex-direction: column;
  padding: 0 14px 0 16px;
}

.showcase_img {
  display: flex;
  flex-direction: column;
  margin-top: 32px;
}

.showcase_img_desktop {
  display: none;
}

.dots_img {
  display: none;
}

.image-geometry-1 {
  display: none;
}

.image-geometry-2 {
  display: none;
}

.image-geometry-4 {
  display: none;
}

.image-geometry-5 {
  display: none;
}

.works {
  margin: 0;
}

.work-card {
  display: flex;
  flex-direction: column;
}

.work-card-first {
  display: flex;
  flex-direction: column;
}

.work-card-text {
  background: #1a2236;
  color: #fff;
  padding: 7px 0 0 20px;
  display: flex;
  flex-direction: column;
  margin-bottom: -4px;
}

.work-card-text .primary-btn-2 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  font-size: large;
  font-weight: 600;
}

.work-card #tagline {
  padding-top: 20px;
  padding-left: 16px;
}

.work-card-first #tagline {
  padding-top: 20px;
  padding-left: 16px;
}

.work-card #lang {
  color: #1a2236;
  background: #98dede;
  text-align: center;
  width: 90px;
  height: 20px;
  margin: 3px 10px 3px 0;
  padding: 3px 10px;
}

.work-card-first #lang {
  color: #1a2236;
  background: #98dede;
  text-align: center;
  width: 90px;
  height: 20px;
  margin: 3px 10px 3px 0;
  padding: 3px 10px;
}

.lang-container {
  display: flex;
  padding: 0;
  margin: 0;
}

.arrow_desktop {
  display: none;
}

.arrow_mobile {
  display: block;
}

.about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.about-intro {
  display: flex;
  flex-direction: column;
}

.about .primary-btn {
  display: flex;
  flex-direction: row;
  background: #1a2236;
  padding: 12px 42px;
  justify-content: center;
  margin-top: 6px;
}

.about #tagline {
  margin-bottom: 6px;
}

.about_cards {
  display: flex;
  flex-direction: column;
  margin-top: 27px;
  gap: 16px;
}

.about_card_blue {
  display: grid;
  background: #1c528a;
  padding: 20px 0 0 40px;
}

.about_card_red {
  display: grid;
  background: #e2505c;
  padding: 20px 0 0 40px;
}

.about_card_yellow {
  display: grid;
  background: #febf52;
  padding: 20px 0 0 40px;
}

#about_card_title {
  padding: 0 0 0 20px;
  margin-bottom: 0;
}

.about_card_icon {
  align-self: end;
  justify-self: end;
  width: 60px;
  height: 60px;
}

.about_cards h3 {
  font-weight: 800;
  color: #fff;
}

.dots_img_teal {
  display: none;
}

.contact {
  display: flex;
  flex-direction: column;
  margin: 0 14px 0 18px;
}
/* ... */

